compiler/testData/diagnostics/tests/annotations/noNameProperty.kt
// FIR_IDENTICAL
annotation class Ann(val x: Int, val<!SYNTAX!><!> )